--- a/Magic_Dataset.ipynb
+++ b/Magic_Dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyODun7ojJX1CQXrvmh3UKku",
+      "authorship_tag": "ABX9TyMBHA++27kKu3ArVuZO/OeE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "gfl-xZwnMhTT"
       },
-      "execution_count": 13,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -62,9 +62,9 @@
           "height": 423
         },
         "id": "VoZO5y-tOAx-",
-        "outputId": "4a755953-f536-48dc-a19e-1815f5a3f125"
+        "outputId": "6337ac51-42d8-43d7-c71c-86da84809299"
       },
-      "execution_count": 14,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-79793e10-20cd-4bf1-997f-c7bec9eb811b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-74fc99bf-794b-47fd-99e5-bc3c245e8f27\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -294,7 +294,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-79793e10-20cd-4bf1-997f-c7bec9eb811b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-74fc99bf-794b-47fd-99e5-bc3c245e8f27')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,12 +346,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-79793e10-20cd-4bf1-997f-c7bec9eb811b button.colab-df-convert');\n",
+              "        document.querySelector('#df-74fc99bf-794b-47fd-99e5-bc3c245e8f27 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-79793e10-20cd-4bf1-997f-c7bec9eb811b');\n",
+              "        const element = document.querySelector('#df-74fc99bf-794b-47fd-99e5-bc3c245e8f27');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -371,8 +371,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-398332ec-060c-4d0a-b975-54e92a20c3f0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-398332ec-060c-4d0a-b975-54e92a20c3f0')\"\n",
+              "<div id=\"df-a7dd8050-180b-4098-ad84-9e00ab1c991b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a7dd8050-180b-4098-ad84-9e00ab1c991b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -491,7 +491,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-398332ec-060c-4d0a-b975-54e92a20c3f0 button');\n",
+              "        document.querySelector('#df-a7dd8050-180b-4098-ad84-9e00ab1c991b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -502,7 +502,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 123
         }
       ]
     },
@@ -519,9 +519,9 @@
           "height": 206
         },
         "id": "nJgATQS5MqI4",
-        "outputId": "fbc2522b-5065-4255-9e4c-9bc01dcf856e"
+        "outputId": "75616ef2-becf-4579-f035-64636e3cefbe"
       },
-      "execution_count": 15,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +543,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f84d9867-6c78-4cee-ad27-f1d87a413c00\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-169de5ba-8acb-4483-9f29-2b152666e41d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -652,7 +652,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f84d9867-6c78-4cee-ad27-f1d87a413c00')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-169de5ba-8acb-4483-9f29-2b152666e41d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -704,12 +704,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f84d9867-6c78-4cee-ad27-f1d87a413c00 button.colab-df-convert');\n",
+              "        document.querySelector('#df-169de5ba-8acb-4483-9f29-2b152666e41d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f84d9867-6c78-4cee-ad27-f1d87a413c00');\n",
+              "        const element = document.querySelector('#df-169de5ba-8acb-4483-9f29-2b152666e41d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -729,8 +729,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8123bb42-9ee2-45e1-9166-d8bdc16ea123\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8123bb42-9ee2-45e1-9166-d8bdc16ea123')\"\n",
+              "<div id=\"df-81510ac7-bc5e-4f74-a72b-0b4065b7c65c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-81510ac7-bc5e-4f74-a72b-0b4065b7c65c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -849,7 +849,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8123bb42-9ee2-45e1-9166-d8bdc16ea123 button');\n",
+              "        document.querySelector('#df-81510ac7-bc5e-4f74-a72b-0b4065b7c65c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -860,7 +860,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 124
         }
       ]
     },
@@ -874,9 +874,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RrpRR-XLM0AG",
-        "outputId": "6e5e2eed-37c8-4153-fb2c-6381860bbb1d"
+        "outputId": "07a542f0-3245-4b53-ebf4-63f8c09bc2dc"
       },
-      "execution_count": 16,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 125
         }
       ]
     },
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "GXByzRC5N89A"
       },
-      "execution_count": 17,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -911,9 +911,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r3w8Xq30Oe5c",
-        "outputId": "81e692a4-581f-42e2-b8d6-18672106946c"
+        "outputId": "7b9f0f29-374f-4db1-da53-bd8f44d6685f"
       },
-      "execution_count": 18,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +923,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 127
         }
       ]
     },
@@ -944,9 +944,9 @@
           "height": 1000
         },
         "id": "brp9StrMQY-7",
-        "outputId": "d77212e0-3645-41a0-d552-073fd5c6a361"
+        "outputId": "889a9348-8670-4e88-907c-463eafa83cbc"
       },
-      "execution_count": 34,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1052,12 +1052,131 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "train, valid, test = np.split(df.sample(frac=1),[int(0.6*len(df)), int(0.8*len(df))])"
+      ],
       "metadata": {
         "id": "ovvkFXh7TEuQ"
       },
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(train[train[\"class\"]==1]))\n",
+        "print(len(train[train[\"class\"]==0]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nF90JxYAbbY0",
+        "outputId": "97613084-2265-463d-aa77-c2f2516925a8"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7362\n",
+            "4050\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "since the number of values representing hadron and gamma are not the same i.e. the dataset does not conclude to same number of gamma and haddron variable, we may need to use random oversampling in a function which will equalize the count of zeroes and ones in the target attribute."
+      ],
+      "metadata": {
+        "id": "wmFqJoYxa9Kl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from imblearn.over_sampling import RandomOverSampler"
+      ],
+      "metadata": {
+        "id": "KfmsjRnjbZLd"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We must scale the values in the dataset to lie between required range to carry out mathematical operations.<br><br>\n",
+        "we use reshape to ensure the dimensions of X and Y are same i.e. X is a 2D array but Y is a 1D array consisting of just the colums values of class(col[-1])."
+      ],
+      "metadata": {
+        "id": "vfvHM2PbWXMj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler"
+      ],
+      "metadata": {
+        "id": "5VNhko0DWRQ6"
+      },
+      "execution_count": 132,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scale_dataset(dataframe, oversample=False):\n",
+        "  X = dataframe[dataframe.columns[:-1]].values\n",
+        "  y = dataframe[dataframe.columns[-1]].values\n",
+        "\n",
+        "  scaler=StandardScaler()\n",
+        "  X = scaler.fit_transform(X)\n",
+        "\n",
+        "  if oversample:\n",
+        "    ros = RandomOverSampler()\n",
+        "    X, Y = ros.fit_resample(X, y)\n",
+        "\n",
+        "  # Separate target variable y and features X\n",
+        "  df_X = pd.DataFrame(X, columns=dataframe.columns[:-1])\n",
+        "  df_y = pd.DataFrame(y, columns=[dataframe.columns[-1]])\n",
+        "\n",
+        "  # Concatenate along columns\n",
+        "  data = pd.concat([df_X, df_y], axis=1)\n",
+        "\n",
+        "  return data, X, y"
+      ],
+      "metadata": {
+        "id": "W1aOMxXKW3Pd"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train, X_train, y_train = scale_dataset(train, oversample=True)\n",
+        "valid, X_valid, y_valid = scale_dataset(valid, oversample=False)\n",
+        "test, X_test, y_test = scale_dataset(test, oversample=False)"
+      ],
+      "metadata": {
+        "id": "g8rnV4_3cozx"
+      },
+      "execution_count": 134,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Oversampling is not done for validation and testing as we will receive random data and we need to trust our dataset will proud accurate results for any number of values of 'h' and 'g'"
+      ],
+      "metadata": {
+        "id": "_Pu-BvcvdMR-"
+      }
     }
   ]
 }
