--- a/Magic_Dataset.ipynb
+++ b/Magic_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHEpW/ZrJOctsaw1FBgsf1",
+      "authorship_tag": "ABX9TyOjKqw/lwtfaW7pFDp5JhCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1341,11 +1341,11 @@
         "print(classification_report(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "2YgqkAvqw1Ng",
-        "outputId": "50573028-cc17-4862-9fa7-0c95e1c8b5ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2YgqkAvqw1Ng",
+        "outputId": "50573028-cc17-4862-9fa7-0c95e1c8b5ad"
       },
       "execution_count": 22,
       "outputs": [
@@ -1367,10 +1367,138 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Logistic Regression"
+      ],
+      "metadata": {
+        "id": "Btw4B2GCxw9S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression"
+      ],
+      "metadata": {
+        "id": "LZUSYHHFx3mm"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lg_model = LogisticRegression()\n",
+        "lg_model = lg_model.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "iHi_D_4n2cft"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = lg_model.predict(X_test)\n",
+        "print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "ndVzb9b92tr7",
+        "outputId": "70cbd842-d2b7-4eff-b8c3-3725b2e37fd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.70      0.73      0.71      1340\n",
+            "           1       0.85      0.83      0.84      2464\n",
+            "\n",
+            "    accuracy                           0.79      3804\n",
+            "   macro avg       0.77      0.78      0.78      3804\n",
+            "weighted avg       0.80      0.79      0.79      3804\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Support Vector Machine"
+      ],
+      "metadata": {
+        "id": "o2xBw2ae5NGC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.svm import SVC"
+      ],
+      "metadata": {
+        "id": "LvfzB5ok5Qpq"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "svm_model = SVC()\n",
+        "svm_model = svm_model.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "kuRFQuS35ZbU"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = svm_model.predict(X_test)\n",
+        "print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "cQvzcfDn5klM",
+        "outputId": "dd21963d-1143-4f91-b895-95bd0ab4c20c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.82      0.80      0.81      1340\n",
+            "           1       0.89      0.90      0.90      2464\n",
+            "\n",
+            "    accuracy                           0.87      3804\n",
+            "   macro avg       0.86      0.85      0.85      3804\n",
+            "weighted avg       0.87      0.87      0.87      3804\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "L3rR0yisxEFa"
+        "id": "ZXXAJDDW53y8"
       },
       "execution_count": null,
       "outputs": []
