--- a/Magic_Dataset.ipynb
+++ b/Magic_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS3HLXSjAJD3foXg3bln10",
+      "authorship_tag": "ABX9TyN65Zh4JVMoDZ627zNhxahd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "gfl-xZwnMhTT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "id": "VoZO5y-tOAx-",
         "outputId": "1c161fe4-47b2-42c4-f534-bf66ede97d53"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
         "id": "nJgATQS5MqI4",
         "outputId": "56415a9f-0704-4cdc-bb14-7ca198c5d0dd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +874,7 @@
         "id": "RrpRR-XLM0AG",
         "outputId": "2783bbcc-0e2d-4a47-d9ed-0926e2bab776"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +896,7 @@
       "metadata": {
         "id": "GXByzRC5N89A"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +911,7 @@
         "id": "r3w8Xq30Oe5c",
         "outputId": "a9e00bdd-86fe-4bd8-d3b8-6d47b33d2fc0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +944,7 @@
         "id": "brp9StrMQY-7",
         "outputId": "82291e4d-6588-4fff-e10e-a4853c0f6c62"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1056,7 +1056,7 @@
       "metadata": {
         "id": "ovvkFXh7TEuQ"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1069,7 +1069,7 @@
       "metadata": {
         "id": "DdiQr6RVLs60"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1085,7 +1085,7 @@
         "id": "nF90JxYAbbY0",
         "outputId": "2724440f-f6bc-465c-8e6c-8b908e8740c0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1114,7 @@
       "metadata": {
         "id": "KfmsjRnjbZLd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1135,7 +1135,7 @@
       "metadata": {
         "id": "5VNhko0DWRQ6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1159,7 +1159,7 @@
       "metadata": {
         "id": "W1aOMxXKW3Pd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,7 +1172,7 @@
       "metadata": {
         "id": "g8rnV4_3cozx"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1196,7 +1196,7 @@
       "metadata": {
         "id": "I-Rixir0MMVL"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1226,7 +1226,7 @@
       "metadata": {
         "id": "gTQLCRlOFES-"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1243,7 +1243,7 @@
         "id": "iUG1xVs7GsPx",
         "outputId": "693e24a8-554c-4060-f7a2-8ae0247c94cd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1268,7 +1268,7 @@
       "metadata": {
         "id": "1Dv-KUXuHFk-"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1283,7 +1283,7 @@
         "id": "8Of9w4pHMiFi",
         "outputId": "fd53371f-1518-4ae0-80fc-8397f4cfc606"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1319,7 +1319,7 @@
       "metadata": {
         "id": "vpMUoDQVMo0-"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1331,7 +1331,7 @@
       "metadata": {
         "id": "7aNFKljZwoPO"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1347,7 +1347,7 @@
         "id": "2YgqkAvqw1Ng",
         "outputId": "50573028-cc17-4862-9fa7-0c95e1c8b5ad"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,7 +1383,7 @@
       "metadata": {
         "id": "LZUSYHHFx3mm"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1395,7 +1395,7 @@
       "metadata": {
         "id": "iHi_D_4n2cft"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1411,7 +1411,7 @@
         "id": "ndVzb9b92tr7",
         "outputId": "70cbd842-d2b7-4eff-b8c3-3725b2e37fd2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1447,7 +1447,7 @@
       "metadata": {
         "id": "LvfzB5ok5Qpq"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1459,7 +1459,7 @@
       "metadata": {
         "id": "kuRFQuS35ZbU"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1475,7 @@
         "id": "cQvzcfDn5klM",
         "outputId": "dd21963d-1143-4f91-b895-95bd0ab4c20c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,7 +1511,7 @@
       "metadata": {
         "id": "iCn_MVbCAPqv"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1534,7 +1534,7 @@
       "metadata": {
         "id": "WK3ArX5IElmB"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1560,7 +1560,7 @@
       "metadata": {
         "id": "yvyzSQgPAVCO"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1579,7 +1579,7 @@
         "        val_loss = model.evaluate(X_valid, y_valid)[0]\n",
         "        if val_loss < least_val_loss:\n",
         "          least_val_loss = val_loss\n",
-        "          least_loss_model = model\n"
+        "          least_loss_model = model"
       ],
       "metadata": {
         "id": "7QaG4ItzKAc6",
@@ -1589,7 +1589,7 @@
           "height": 1000
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
